--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <div class="card">
     <div class="imgBx">
-      <img src="/photos/danish.jpg" alt="" />
+      <img src="photos/danish.jpg" alt="" />
     </div>
     <h2 class="profile-name">Danish farhan</h2>
     <small class="user-handle">@danish_farhan07</small>
